FIx minor issues

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,8 +18,8 @@
             "name": "GDB Debug",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/build/main.exe",
-            "args": ["-gui"],
+            "program": "${workspaceFolder}/build/main",
+            "args": ["-t"],
             "preLaunchTask": "Make",
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
