Added stream test

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cuda-gdb",
             //"debuggerPath": "/home/victor/workspace/CuBer/cuda-gdb",
             "request": "launch",
-            "args": ["-gui"],
+            "args": ["-t"],
             "program": "${workspaceFolder}/build/main",
             "preLaunchTask": "Make",
             "cwd": "${workspaceFolder}"
