Started shared mem addition

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -87,6 +87,7 @@
         "thread": "cpp",
         "regex": "cpp",
         "bitset": "cpp",
-        "*._cuh": "cpp"
+        "*._cuh": "cpp",
+        "*._cu": "cpp"
     }
 }
